--- a/css.css
+++ b/css.css
@@ -214,10 +214,13 @@
      text-align: center;
      clear: both;
      padding-top: 50px;
-     font-size: 25px;
+     font-size: 20px;
      height: 300px;
      background-color: #3B3738;
      color: white;
+}
+#gmailTagLine{
+	font-size: 25px;
 }
  #nameContainer{
      float: left;
@@ -337,6 +340,9 @@
      #projectPicture{
          display: none;
     }
+	#content{
+		margin: 10px; 
+	}
      nav ul li img{
          height: 25px;
          width: 25px;
