No more resume logo; updated to about me

--- a/css.css
+++ b/css.css
@@ -72,6 +72,7 @@
      border:none;
      padding:0!important;
      font-size: 10px;
+	 margin-left: 10px;
 }
  #aboutMeButton:hover{
      text-decoration:underline;
