--- a/css.css
+++ b/css.css
@@ -12,14 +12,8 @@
  button:focus {
      outline: 0;
 }
-h2{
-	position: absolute; 
-   bottom: 0px; 
-    color: white;  
-	width: 100%;
-   font-size: 20px; 
-   margin: 0px; 
-}
+
+
 /* !Nav! */
  nav {
      background-color: #3B3738;
@@ -209,6 +203,16 @@ h2{
  button{
      cursor: pointer;
 }
+
+.logoText{
+	position: absolute; 
+   bottom: 0px; 
+    color: white;  
+	width: 100%;
+   font-size: 20px; 
+   margin: 0px; 
+}
+
  .projectSelectButton {
      background: white;
      max-width: 150px;
@@ -258,12 +262,24 @@ h2{
  #splash button img{
      width: 100%;
 }
+
+.splashText{
+	font-family: 'Roboto', sans-serif;
+	font-weight: bold; 
+	 font-size: 27px; 
+	position: absolute; 
+    top: 55%;
+    color: white;  
+	width: 100%;
+
+}
  #splash{
      text-align: center;
      margin: 0;
      padding: 0;
      width: 100%;
      height: 100%;
+	 position: relative; 
 }
  #index{
      display: none;
@@ -309,7 +325,7 @@ h2{
     }
     /* NAV */
      nav{
-         height: 100px;
+         height: 97px;
     }
      nav ul{
          display: block;
@@ -393,7 +409,7 @@ h2{
          white-space: normal;
     }
 	h2{
-		font-size: 22px; 
+		font-size: 18px; 
 	}
      #projectSelectBoxes{
          overflow-x: visible;
