--- a/css.css
+++ b/css.css
@@ -411,8 +411,8 @@
          height: 100px;
          white-space: normal;
     }
-	h2{
-		font-size: 18px; 
+	.logoText{
+		font-size: 17px; 
 	}
      #projectSelectBoxes{
          overflow-x: visible;
