--- a/css.css
+++ b/css.css
@@ -287,6 +287,10 @@
  #index{
      display: none;
 }
+span{
+	margin: 0px; 
+	padding: 0px;
+}
  @media screen and (max-width: 850px) {
     /* SPLASH PAGE */
      #splash button{
@@ -365,7 +369,6 @@
     }
      #projectInfoText{
          position: relative;
-         margin-bottom: 10px;
     }
      #projectPicture{
          display: none;
@@ -408,17 +411,19 @@
      .projectSelectButton{
          width: 100%;
          max-width: 100%;
-         height: 100px;
+         height: 50px;
          white-space: normal;
     }
 	.logoText{
 		font-size: 17px; 
+		right: 83px;
+		top: 13px;
 	}
      #projectSelectBoxes{
          overflow-x: visible;
          white-space: normal;
     }
      .projectSelectImage{
-         width: 100px;
+         width: 50px;
     }
 }
