--- a/css.css
+++ b/css.css
@@ -10,6 +10,7 @@
     	font-family: 'Roboto', sans-serif;
      z-index: 0;
 	 background: black;
+	 
 }
  button:focus {
      outline: 0;
@@ -194,6 +195,11 @@
      opacity: 0.6;
      width: 100%;
      height: auto;
+	  -webkit-transition: .5s;
+     -moz-transition: .5s;
+     -ms-transition: .5s;
+     -o-transition: .5s;
+     transition: .5s;
 }
 /* Project Buttons */
  #projectSelectBoxes {
