--- a/css.css
+++ b/css.css
@@ -140,7 +140,7 @@
      width: 95%;
 }
  #projectFrontEnd li, #projectBackEnd li {
-     border-radius: 5px;
+     border: none; 
      display: inline-block;
      text-transform: uppercase;
      letter-spacing: 0.2em;
@@ -148,11 +148,10 @@
      margin: 0px 3px 4px 3px;
 }
  #projectFrontEnd li {
-     border: 1px solid #C54E30;
+
      background: #C54E30; 
 }
  #projectBackEnd li {
-     border: 1px solid #9952B7;
      background: #9952B7;
 }
  #projectLinks {
@@ -164,7 +163,6 @@
      list-style-type: none;
      margin: 5px 10px 0px 0px;
      font-size: 17px;
-     border: 2px solid #2D304C;
      text-transform: uppercase;
      letter-spacing: 0.2em;
 	   background: #2D304C;
@@ -185,8 +183,7 @@
      transition: color .5s;
 }
  #projectLinks li:hover {
-    background: #181A29;
-	border-color: #181A29;
+     opacity: 0.7;
 }
 
  #projectPicture {
