--- a/css.css
+++ b/css.css
@@ -44,7 +44,7 @@
 
  .sliderBtn{
     position: absolute;
-    top: 40%;
+    top: 10%;
     width: 52px;
     height: 52px;
     border-radius: 50%;
@@ -170,6 +170,7 @@
      max-width: 700px;
      margin: 0 auto;
      padding-bottom: 30px;
+     padding-top: 50px;
 }
  #projectTitle{
      padding-top: 4%;
@@ -287,7 +288,7 @@ font-family: 'Roboto', sans-serif;
      clear: both;
      padding-top: 50px;
      font-size: 20px;
-     height: 300px;
+     height: 100%;
      background-color: #3B3738;
      color: white;
 }
