HTML5 video background

--- a/css.css
+++ b/css.css
@@ -213,6 +213,7 @@
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
 }
+
  #projectLinks li {
      display: inline-block;
      list-style-type: none;
@@ -254,6 +255,14 @@
      -ms-transition: .5s;
      -o-transition: .5s;
      transition: .5s;
+}
+#projectVideo{
+    display: block;
+    /*position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;*/
 }
 /* Project Buttons */
  #projectSelectBoxes {
