--- a/css.css
+++ b/css.css
@@ -173,6 +173,7 @@
     padding-bottom: 30px;
     width: 100%;
     height: 90%;
+    margin-top: 50px; 
 }
  #projectTitle{
     /* padding-top: 4%; */
@@ -221,7 +222,7 @@
     padding: 0px;
     position: absolute;
     left: calc(50% - 418px);
-    bottom: 0px;
+    bottom: 30px;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
@@ -258,16 +259,25 @@
      opacity: 0.7;
 }
 
+#video-jumbotron{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 600px;
+    margin-top: -50px; 
+}
+
  #projectPicture {
      display: block;
      opacity: 0.6;
-     width: 100%;
-     height: auto;
+
 	  -webkit-transition: .5s;
      -moz-transition: .5s;
      -ms-transition: .5s;
      -o-transition: .5s;
      transition: .5s;
+    width: 100%; 
+     position: absolute; 
 }
 #projectVideo{
     display: block;
