--- a/css.css
+++ b/css.css
@@ -155,7 +155,7 @@
      width: 100%;
      position: relative;
      margin-top: 57px;
-     height: auto;
+     height: 90%;
 }
  #projectInfoText{
      position: absolute;
@@ -173,7 +173,7 @@
     padding-bottom: 30px;
     width: 100%;
     height: 90%;
-    margin-top: 50px; 
+    margin-top: 50px;
 }
  #projectTitle{
     /* padding-top: 4%; */
@@ -262,9 +262,9 @@
 #video-jumbotron{
     position: relative;
     overflow: hidden;
-    width: 100%;
-    height: 600px;
-    margin-top: -50px; 
+    width: auto;
+    height: 100%;
+    margin-top: -60px; 
 }
 
  #projectPicture {
