--- a/css.css
+++ b/css.css
@@ -221,14 +221,16 @@
  #projectLinks {
     padding: 0px;
     position: absolute;
-    left: calc(50% - 418px);
-    bottom: 30px;
+   /* left: calc(50% - 418px); */
+    bottom: 40px;
     left: 50%;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
+    text-align: center; 
 }
 
  #projectLinks li {
+     text-align: center; 
      display: inline-block;
      list-style-type: none;
      margin: 5px 10px 0px 0px;
@@ -403,19 +405,9 @@ font-family: 'Roboto', sans-serif;
 	opacity: .5;
 }
 
- @media screen and (max-width: 850px) {
+ @media screen and (max-width: 950px) {
     /* SPLASH PAGE */
-     #splash button{
-         height: 250px;
-         width: 100%;
-    }
-     #splash{
-         margin-top: 70px;
-         width: 100%;
-    }
-     #splash button img{
-         width: 150px;
-    }
+  
      #aboutMeText, #credit{
          font-size: 18px;
     }
@@ -430,13 +422,43 @@ font-family: 'Roboto', sans-serif;
      #projectFrontEnd li, #projectBackEnd li {
          font-size: 12px;
     }
-     h1 {
-         margin: .37em 0px;
-         font-size: 1.4em;
+    #projectPicture{
+        display: block;
+        opacity: 0.6;
+        -webkit-transition: .5s;
+        -moz-transition: .5s;
+        -ms-transition: .5s;
+        -o-transition: .5s;
+        transition: .5s;
+        /* width: 100%; */
+        width: auto; 
+        position: absolute;
+        height: 100%;
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+        left: 50%;
     }
-	
+    #video-jumbotron{
+        height: 100%;
+        width: auto; 
+    }
+    #projectLinks li {
+        width: 50%;
+        font-size: 18px;
+   }
 }
  @media screen and (max-width: 700px) {
+    #splash button{
+        height: 250px;
+        width: 100%;
+   }
+    #splash{
+        margin-top: 70px;
+        width: 100%;
+   }
+    #splash button img{
+        width: 150px;
+   }
 	 #nameNavContainer{
 		 padding: 0px; 
 	 }
@@ -483,11 +505,10 @@ font-family: 'Roboto', sans-serif;
      #projectTitle{
          padding-top: 40px;
     }
-     #projectLinks li {
-         width: 90%;
-         font-size: 18px;
-		
-    }
+    #projectLinks li {
+        width: 90%;
+        font-size: 18px;
+   }
      #projectInfoText{
          position: relative;
     }
